--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "Suhail khan",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "express-ejs-layouts": "^2.5.1"
   }
 }
