--- a/package.json
+++ b/package.json
@@ -13,8 +13,25 @@
   "author": "Suhail khan",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.0.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-ejs-layouts": "^2.5.1"
+    "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.2",
+    "kue": "^0.11.6",
+    "mongoose": "^7.4.4",
+    "multer": "^1.4.5-lts.1",
+    "node-sass-middleware": "^1.0.1",
+    "nodemailer": "^6.9.5",
+    "passport": "^0.6.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.7.2"
   }
 }
